--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Voice-Driven AI Interface Design</title>
+      <meta property="og:image" content="/og-preview.png" />
+      <meta property="og:title" content="Voice-Driven AI Interface Design" />
+      <meta property="og:description" content="A next-generation interface for AI-assisted cannabis formulation." />
+      <meta name="twitter:card" content="summary_large_image" />
     </head>
 
     <body>
